...

                      //Username
                      _CustomTextField(controller: _username, hintText: 'Username',
                          prefixIcon: Icons.person, obscureText: false,
                          validator: (value) {
                            if (value == null || value.isEmpty) {
                              return 'Please enter a username';
                            }
                            return null;
                          }),
                      const SizedBox(height:20),

                      //Email
...
                      _CustomTextField(controller: _password, hintText: 'Password',
                          prefixIcon: Icons.lock, obscureText: true,
                          validator: (value) {
                            if (value == null || value.isEmpty) {
                              return 'Please enter a password';
                            } else if (value.length < 6) {
                              return 'Password length must be at least 6 characters';
                            } else {
                              return null;
                            }
                          }),
                      const SizedBox(height:20),

                      //Confirm Password
                      _CustomTextField(controller: _confirmPassword,
                          hintText: 'Confirm Password',
                          prefixIcon: Icons.lock, obscureText: true,
                          validator: (value) {
                            if (value == null || value.isEmpty) {
                              return 'Please confirm your password';
                            } else if (value != _password.text){
                              return 'Password do not match!';
                            } else {
                              return null;
                            }
                          }),
                      const SizedBox(height:20),

...
                                    context,
                                    MaterialPageRoute(builder: (context) => const SuccessfulRegistration()),
                                  );
                                }
                              } on FirebaseAuthException catch (e) {
                                if (e.code == 'username-already-taken') {
                                  error = 'This username has already been taken';
                                } else if (e.code == "email-already-in-use") {
                                  error = 'This email is already in use';
                                } else {
                                  error = 'An error occurred. Please try again later.';
                                }
                              } catch (e) {
                                error = 'An error occurred. Please try again later.';
                              }
...
